[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.10"
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = [
    "signing",
    "verifying",
    "serde",
    "pem",
] }
flume = "0.12.0"
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["serde", "pem"] }
rand = "0.9.2"
serde = { version = "1.0.198", features = ["derive"] }
sha256 = "1.5.0"
spki = { version = "0.7.3", features = ["pem"] }
thiserror = "2.0.12"
tokio = { version = "1.38.0", features = ["full"] }
uint = "0.10.0"
uuid = { version = "1.8.0", features = [
    "v4",
    "serde",
] } # used to assign unique IDs to trxn outputs, so 
# that we can ensure they have unique hashes , and we can uniquely identify an unspent trxn output by its hash.
